--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "source": [
         "#Functions\n",
-        "1.What is the difference between a function and a method in pyhon?\n",
+        "1.What is the difference between a function and a method in python?\n",
         ">-In python, a function is a standable block of codethat can be called multiple times from different parts of a program.A mwthod,on the other hand,is a function that is associated with a particular class or object."
       ],
       "metadata": {
